--- a/PF/index.html
+++ b/PF/index.html
@@ -34,7 +34,7 @@
         </div>
     </nav>
 
-    <body class="p-3 m-0 border-0 bd-example">
+<!--     <body class="p-3 m-0 border-0 bd-example">
 
         <!-- Example Code -->
 
@@ -63,7 +63,7 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
+          </div> -->
 
 
     </body>
